2012-06-06  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-compat.el (tramp-compat-temporary-file-directory): Ensure,
	that the temp directory is local.

	* tramp-sh.el (tramp-sh-handle-write-region): Let-bind
	`temporary-file-directory'.

2012-06-03  Michael Albinus  <michael.albinus@gmx.de>

	Version 2.2.5 released.

	* tramp-compat.el (tramp-compat-condition-case-unless-debug): New
	defmacro.

	* tramp.el (tramp-file-name-handler): Use it.

2012-06-01  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-file-name-handler): If `debug-on-error' is set,
	propagate an error unchanged.
	(tramp-check-for-regexp): Search from buffer end, in order to
	avoid "Stack overflow in regexp matcher".

2012-05-08  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-sh.el (tramp-do-file-attributes-with-stat)
	(tramp-do-directory-files-and-attributes-with-stat) Return uid and
	gid as real numbers.  They could run out of integer range on cygwin.

2012-04-23  Chong Yidong <cyd@gnu.org>

	* tramp.el (tramp): Fix docstring.

2012-04-23  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-sh.el (tramp-copy-size-limit): Fix docstring.
	(tramp-do-copy-or-rename-file-out-of-band): Better trace format.

2012-04-19  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-action-password): Let-bind
	`enable-recursive-minibuffers' to t.

2012-04-19  Chong Yidong <cyd@gnu.org>

	Remove * characters from the front of variable docstrings.

2012-04-18  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-cache.el (tramp-dump-connection-properties): Let-bind
	`print-length' and `print-level' to nil, in order to avoid
	truncation.  Reported by Christopher Schmidt
	<christopher@ristopher.com>.

2012-04-02  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-gvfs.el (tramp-gvfs-send-command): Apply
	`tramp-compat-call-process' instead of `tramp-local-call-process'.
	Reported by Magnus Henoch <magnus.henoch@gmail.com>.

2012-04-01  Chong Yidong  <cyd@gnu.org>
