@@ -1,3 +1,8 @@
+2012-06-08  Michael Albinus  <michael.albinus@gmx.de>
+
+	* tramp-compat.el (tramp-compat-temporary-file-directory): Avoid
+	infloop.
+
 2012-06-06  Michael Albinus  <michael.albinus@gmx.de>
 
 	* tramp-compat.el (tramp-compat-temporary-file-directory): Ensure,
